--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>projectHub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/main.css"/>
   </head>
 
   <body>
@@ -73,8 +73,6 @@
     <!-- Add additional services that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-messaging.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-functions.js"></script>
 
     <!-- Comment out (or don't include) services that you don't want to use -->
