minor css changes

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <a id='logout' class='topButton' href='./index.html'>Logout</a>
         <a id='settings' class='topButton' href='test'>Settings</a>
         <span id='profileName'>Username</span>
-        <img id='profileImage' src='./images/profile-orange.png' alt='A profile image'>
+        <img id='profileImage' src='./images/profile-blue-background.png' alt='A profile image'>
     </div>
 
     <div id='agendaSpace'>Loading agendas ...</div>
@@ -52,7 +52,7 @@
         <button id="validateBtn">Enter</button>
       </div>
     </div>
-    
+
 
     <!-- <div class="modal">
         <div id="modal-content">
@@ -66,7 +66,7 @@
         </div>
     </div> -->
 
-    
+
     <!-- Firebase App is always required and must be first -->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-app.js"></script>
 
