Centered spinning loader

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       </div>
       <div id="firebaseui-auth-container"></div>
       <div id="loader">Loading, loading, deeply loading...</div>
-      <div id='spinner'></div>
+      <div id='spinnerWrapper'>
+        <div id='spinner'></div>
+      </div>
+
     </div>
 
 
