--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <img id='profileImage' src='./images/profile-blue-background.png' alt='A profile image'>
     </div>
 
-    <div id='agendaSpace'>Loading agendas ...</div>
+<!--    <div id='agendaSpace'>Loading agendas ...</div> -->
 
     <!-- <header>
       <div>
