--- a/roomCreation.html
+++ b/roomCreation.html
@@ -16,7 +16,7 @@
         <div id='content'>
                 <h1>Create Room</h1>
                 <h2>Room Name:</h2>
-                <input id='roomName' type='name' name='roomName' required='required' 
+                <input id='roomName' type='name' name='roomName' required='required'
                     placeholder='Type here...' size='25' pattern='(2,25)' autofocus/>
                 <h2>Room Description:</h2>
                 <textarea id='roomDesc' type='text' rows='2' cols='25' name='roomDesc' placeholder='Type here...'/>
@@ -38,10 +38,10 @@
         <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-database.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-functions.js"></script>
         <script src="./js/firebase_setup.js"></script>
-        
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="./js/room_creation.js"></script>
-            
+
         </script>
     </body>
 </html>
