removed loading message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>We Project Your Success</h2>
       </div>
       <div id="firebaseui-auth-container"></div>
-      <div id="loader">Loading, loading, deeply loading...</div>
+      <div id="loader"></div>
       <div id='spinnerWrapper'>
         <div id='spinner'></div>
       </div>
