minor text fixes

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
         <span id='roomName'>projectHub</span>
         <a id='logout' class='topButton' href='./index.html'>Logout</a>
         <a id='settings' class='topButton' href='test'>Settings</a>
-        <span id='profileName'>Username</span>
+        <span id='profileName'>....</span>
         <img id='profileImage' src='./images/profile-blue-background.png' alt='A profile image'>
     </div>
 
