--- a/roomCreation.html
+++ b/roomCreation.html
@@ -10,7 +10,7 @@
             <span id='room'>projectHub</span>
             <a id='logout' class='topButton' href='test'>Logout</a>
             <a id='settings' class='topButton' href='test'>Settings</a>
-            <span id='profileName'>Username</span>
+            <span id='profileName'>...</span>
             <img id='profileImage' src='./images/profile-orange.png' alt='A profile image'>
         </div>
         <div id='content'>
