Changed profile picute, changed Username to ...

--- a/roomCreation.html
+++ b/roomCreation.html
@@ -10,8 +10,8 @@
             <span id='room'>projectHub</span>
             <a id='logout' class='topButton' href='test'>Logout</a>
             <a id='settings' class='topButton' href='test'>Settings</a>
-            <span id='profileName'>Username</span>
-            <img id='profileImage' src='./images/profile-orange.png' alt='A profile image'>
+            <span id='profileName'>...</span>
+            <img id='profileImage' src='./images/profile-blue-background.png' alt='A profile image'>
         </div>
         <div id='content'>
                 <h1>Create Room</h1>
