--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <div id='header'>
         <span id='roomName'>projectHub</span>
         <a id='logout' class='topButton' href='./index.html'>Logout</a>
-        <a id='settings' class='topButton' href='test'>Settings</a>
+        <a id='settings' class='topButton' href='#'>Settings</a>
         <span id='profileName'>...</span>
         <img id='profileImage' src='./images/profile-blue-background.png' alt='A profile image'>
     </div>
