deleted unnecessary files

--- a/roomCreation.html
+++ b/roomCreation.html
@@ -9,7 +9,7 @@
         <div id='header'>
             <span id='room'>projectHub</span>
             <a id='logout' class='topButton' href='test'>Logout</a>
-            <a id='settings' class='topButton' href='test'>Settings</a>
+            <a id='settings' class='topButton' href='./main.html'>Cancel</a>
             <span id='profileName'>...</span>
             <img id='profileImage' src='./images/profile-blue-background.png' alt='A profile image'>
         </div>
